<menu xmlns:android="http://schemas.android.com/apk/res/android" >


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    
    <item
        android:id="@+id/menu_options"
        android:title="@string/action_options"
        android:orderInCategory="120"
        android:showAsAction="always">
      
      <menu>
        
        <item
            android:id="@+id/action_license_view"
            android:icon="@drawable/ic_menu_document"
            android:orderInCategory="200"
            android:showAsAction="always"
            android:title="@string/action_license_view" />
        
        <item
            android:id="@+id/itemBackup"
            android:icon="@drawable/ic_menu_marquee_download"
            android:orderInCategory="100"
            android:showAsAction="ifRoom|collapseActionView"
            android:title="@string/action_csv_export"/>
        
        <item
            android:id="@+id/itemRestore"
            android:icon="@drawable/ic_menu_marquee_upload"
            android:orderInCategory="100"
            android:showAsAction="ifRoom|collapseActionView"
            android:title="@string/action_csv_import"/>
        
      </menu>

    </item>
    
</menu>